2009-02-06  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	* plothist.test: Moved to examples/plotchart, renamed to
	  plothist.tcl. This is actually not a test suite in the standard
	  form using tcltest, but an example application.

	* plotcontour.test: Added boilerplate to make it more of a test
	  suite, proper indentation.

2008-02-06 Arjen Markus  <arjenmarkus@users.sourceforge.net>

        * plotcontour.tcl:  Commented out one remaining debug puts statement

2009-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.5 ========================
	*

2008-01-20 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotpriv.tcl:  Removed spurious puts statements
        * plotdemos*.tcl: Removed source statement - patch 2521626 (Stuart Cassoff)
        * plothist.test: Corrected histogram test (same patch)

2008-01-18 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Document the rescale method and the new options to createTimeChart
        * plotchart.tcl: Implemented new options for createTimeChart and
                         createGanttChart
        * plotpriv.tcl:  Correction in label to time line - different position
                         Smaller filled circle and central position for
                         asterisk in box plots
        * pkgIndex.tcl:  Bumped version to 1.6.1

2008-12-16 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotdemo8.tcl: Additional demo script - boxplots

2008-12-15 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * pkgIndex.tcl: Increased version number to 1.6.0
        * plotgantt.tcl: Corrected a few tags and added reordering to
                         get scrolling of Gantt charts
        * plotchart.man: Added description of scrolling behaviour for
                         timecharts and Gantt charts

2008-12-09 Arjen Markus  <arjenmarkus@users.sourceforge.net>